--- a/portfolio.html
+++ b/portfolio.html
@@ -30,13 +30,13 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link" id="home-btn" aria-current="page" href="landing.html">Home</a>
+            <a class="nav-link" id="home-btn" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -315,19 +315,6 @@
   </footer>
 </main>
 
-
-    <script>
-     
-document.getElementById("contact-btn").onclick = function () {
-            window.location.href = "contact.html";
-        }
-document.getElementById("about-btn").onclick = function () {
-            window.location.href = "about.html";
-        }
-        document.getElementById("home-btn").onclick = function () {
-            window.location.href = "about.html";
-        } 
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
       
   </body>
