--- a/portfolio.html
+++ b/portfolio.html
@@ -89,17 +89,17 @@
       <div class="col-lg-4">
         <img src="public/images/aurora_working.JPG" class="bd-placeholder-img rounded-circle" width="200" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></img>
         <h2 class="fw-normal">Artist's Contact</h2>
-        <p><a class="btn btn-secondary" href="contact.html">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="public/images/IMG_0427.JPG" class="bd-placeholder-img rounded-circle" width="200" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></img>
         <h2 class="fw-normal">Home</h2>
-        <p><a class="btn btn-secondary" id="home-btn" href="landing.html">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" id="home-btn" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="public/images/aurora_model.jpg" class="bd-placeholder-img rounded-circle" width="200" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></img>
         <h2 class="fw-normal">Artist's Bio</h2>
-        <p><a class="btn btn-secondary" href="about.html">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -315,6 +315,7 @@
   </footer>
 </main>
 
+<script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
       
   </body>
