--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aurora Zhang</title>
-  
+
+<!--Imported Font-->
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 
 
@@ -14,6 +15,7 @@
   
 </head>
 <body>
+    <!--Hamburger Menu without JS only CSS-->
     <div class="menu-wrap">
     <input type="checkbox" class="toggler" />
     <div class="hamburger"><div></div></div>
@@ -21,7 +23,6 @@
         <div>
         <div>
             <ul>
-                <!--<li><a href="#" class="home-btn" id="home-btn">Home</a></li>-->
                 <li><a href="#" id="portfolio-btn">Projects and Portfolio</a></li>
                 <li><a href="#"  id="about-btn">About the Artist</a></li>
                 <li><a href="#"  id="contact-btn">Contact Information</a></li>
@@ -30,12 +31,15 @@
         </div>
         </div>
     </div>
+    <!--Landing Page Info-->
     <header class="showcase">
         <div>
         <div class="container showcase-inner">
         <h1>Welcome</h1>
         <p>
-            The following website is a compendium of artwork created by Aurora Zhang, a metalworker and jewelry designer. Click Explore to go to see Aurora's portfolio.
+            The following website is a compendium of artwork created by Aurora Zhang, 
+            a metalworker and jewelry designer. 
+            Click 'Explore' to go to see Aurora's portfolio.
             <div>
                 <a href="#" class="explore-btn" id="explore-btn">Explore</a>
             </div>
@@ -45,7 +49,21 @@
 </div>
     
 </header>
-<script src="index.js"></script>
+<!--JS Button Functionality-->
+<script>
+    document.getElementById("explore-btn").onclick = function () {
+        window.location.href = "portfolio.html";
+    }
+    document.getElementById("portfolio-btn").onclick = function () {
+        window.location.href = "portfolio.html";
+    }
+    document.getElementById("contact-btn").onclick = function () {
+        window.location.href = "contact.html";
+    }
+    document.getElementById("about-btn").onclick = function () {
+        window.location.href = "about.html";
+    }
+</script>
   
     </body>
    
