--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
       </a>
 
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 text-dark text-decoration-none" id="home-btn" href="#">Home</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" id="portfolio-btn" href="#">Portfolio</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" id="about-btn" href="#">About</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" id="home-btn" href="index.html">Home</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" id="portfolio-btn" href="portfolio.html">Portfolio</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" id="about-btn" href="about.html">About</a>
       </nav>
     </div>
 
