--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div>
         <div>
             <ul>
-                <li><a href="#" id="portfolio-btn">Projects and Portfolio</a></li>
-                <li><a href="#"  id="about-btn">About the Artist</a></li>
-                <li><a href="#"  id="contact-btn">Contact Information</a></li>
+                <li><a href="portfolio.html" id="portfolio-btn">Projects and Portfolio</a></li>
+                <li><a href="about.html"  id="about-btn">About the Artist</a></li>
+                <li><a href="contact.html"  id="contact-btn">Contact Information</a></li>
             </ul>
             </div>
         </div>
@@ -41,7 +41,7 @@
             a metalworker and jewelry designer. 
             Click 'Explore' to go to see Aurora's portfolio.
             <div>
-                <a href="#" class="explore-btn" id="explore-btn">Explore</a>
+                <a href="portfolio.html" class="explore-btn" id="explore-btn">Explore</a>
             </div>
 
             
