--- a/about.html
+++ b/about.html
@@ -16,27 +16,27 @@
 
      <!-- Custom styles for this page-->
     <link href="public/about.css" rel="stylesheet">
-    <link href="public/project.css" rel="stylesheet">
+    <link href="public/portfolio.css" rel="stylesheet">
   </head>
   <body>
 
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Aurora Zhang</a>
+          <a class="navbar-brand" href="index.html">Aurora Zhang</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a class="nav-link" id="home-btn" href="#">Home</a>
+                <a class="nav-link" id="home-btn" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="portfolio-btn" href="#">Portfolio</a>
+                <a class="nav-link" id="portfolio-btn" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="contact-btn" href="#">Contact</a>
+                <a class="nav-link" id="contact-btn" href="contact.html">Contact</a>
               </li>
             </ul> 
           </div>
