--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this page-->
-    <link href="public/project.css" rel="stylesheet">
+    <link href="public/portfolio.css" rel="stylesheet">
     
     
   </head>
@@ -31,13 +31,13 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link" id="home-btn" href="#">Home</a>
+            <a class="nav-link" id="home-btn" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="about-btn" href="#">About</a>
+            <a class="nav-link" id="about-btn" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="contact-btn" href="#">Contact</a>
+            <a class="nav-link" id="contact-btn" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -88,19 +88,19 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="public/images/aurora_working.JPG" class="bd-placeholder-img rounded-circle" width="200" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></img>
+        <img src="public/images/aurora_working.JPG" class="bd-placeholder-img rounded-circle" width="190" height="190" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></img>
         <h2 class="fw-normal">Artist's Contact</h2>
-        <p><a class="btn btn-secondary" id="contact-btn-l" href="#">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" id="contact-btn-l" href="contact.html">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="public/images/IMG_0427.JPG" class="bd-placeholder-img rounded-circle" width="200" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></img>
+        <img src="public/images/IMG_0427.JPG" class="bd-placeholder-img rounded-circle" width="190" height="190" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></img>
         <h2 class="fw-normal">Home</h2>
-        <p><a class="btn btn-secondary" id="home-btn-l" href="#">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" id="home-btn-l" href="index.html">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="public/images/aurora_model.jpg" class="bd-placeholder-img rounded-circle" width="200" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></img>
+        <img src="public/images/aurora_model.jpg" class="bd-placeholder-img rounded-circle" width="190" height="190" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/></img>
         <h2 class="fw-normal">Artist's Bio</h2>
-        <p><a class="btn btn-secondary" id="about-btn-l" href="#">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" id="about-btn-l" href="about.html">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
