Clipboard JS Test

--- a/contact.html
+++ b/contact.html
@@ -114,6 +114,9 @@ document.getElementById("about-btn").onclick = function () {
 document.getElementById("insta-btn").onclick = function () {
     window.location.href = "https://instagram.com/a7jewelry?igshid=Mzc1MmZhNjY=";
 }
+document.getElementById("email-btn").onclick = function () {
+    navigator.clipboard.writeText("aurorazjewelry@gmail.com")
+}
 </script>
     
   </body>
