first update rollout

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,11 +20,11 @@
     
   </head>
   <body>
-    <!--removed from nav: bg-dark -->
+    <!--removed from nav class: bg-dark bg-dark fixed-top-->
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark  ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Aurora Zhang</a>
+      <a class="navbar-brand" href="index.html"><img src="/public/images/az_logo.png" height="70px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -117,7 +117,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Growing" ring series, <span class="text-muted">2023</span></h2>
-        <p class="lead">Created with a conjunction of Glass, Recycled Sterling Silver, Resin, and other Recycled Studio Waste.</p>
+        <p class="lead">Created from a Conjunction of Glass, Recycled Sterling Silver, Resin, and other Recycled Studio Waste.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/showcase_growing_rings.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -129,7 +129,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">"Expand" earpiece,  <span class="text-muted">2023</span></h2>
-        <p class="lead">A combination of Bronze with external additions made of Resin.</p>
+        <p class="lead">A Combination of Bronze with External Additions Made of Resin.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="public/images/showcase_expand.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -141,7 +141,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Deserted" ashtray, <span class="text-muted">2023</span></h2>
-        <p class="lead">Constructed from Copper, Resin, and Recycled Studio Waste.</p>
+        <p class="lead">Constructed with Copper, Resin, and Recycled Studio Waste.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/showcase_ash.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -153,7 +153,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">"Cactus Knuckles" handpiece, <span class="text-muted">2023</span></h2>
-        <p class="lead">Sterling Silver and Resin.</p>
+        <p class="lead">Comprised of Sterling Silver and Resin.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="public/images/showcase_cactus_knuckles.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -165,7 +165,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Venus Flytrap" mouthpiece,  <span class="text-muted">2023</span></h2>
-        <p class="lead">Bronze, Fine Silver, Resin, and Medical Grade Nylon.</p>
+        <p class="lead">Assembled from Bronze, Fine Silver, Resin, and Medical Grade Nylon.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/showcase_mouthpiece.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -177,7 +177,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">"The Zone" necklace, <span class="text-muted">2023</span></h2>
-        <p class="lead">Glass, Resin, Silver, Somos Watershed11122 Stereolithographic Resin, Recycled Material.</p>
+        <p class="lead">Crafted from Glass, Resin, Silver, Somos Watershed11122 Stereolithographic Resin, and Recycled Material.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="public/images/showcase_succulent.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -189,7 +189,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Hanging Plant" earrings (Green),  <span class="text-muted">2023</span></h2>
-        <p class="lead">Glass, Silver, Fine Silver, Resin, Recycled Material.</p>
+        <p class="lead">A Display of Glass, Silver, Fine Silver, Resin, and Recycled Material.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/green_hang.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -201,7 +201,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">"Hanging Plant" earrings (Pink), <span class="text-muted">2023</span></h2>
-        <p class="lead">Glass, Silver, Fine Silver, Resin, Recycled Material.</p>
+        <p class="lead">A Display of Glass, Silver, Fine Silver, Resin, and Recycled Studio Materials.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="public/images/purple_hang.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -213,7 +213,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Growing" ring series collection,  <span class="text-muted">2023</span></h2>
-        <p class="lead">Glass, Recycled Sterling Silver, Resin, Recycled Studio Materials.</p>
+        <p class="lead">Each Fused from Glass, Recycled Sterling Silver, Resin, and Recycled Studio Materials.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/ring_collection.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -225,7 +225,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">"Growing" individual ring, <span class="text-muted">2023</span></h2>
-        <p class="lead">Glass, Recycled Sterling Silver, Resin, Recycled Studio Materials.</p>
+        <p class="lead">Made of Glass, Recycled Sterling Silver, Resin, and Recycled Studio Materials.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="public/images/closeup_ring_one.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -237,7 +237,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Growing" individual ring,  <span class="text-muted">2023</span></h2>
-        <p class="lead">Glass, Recycled Sterling Silver, Resin, Recycled Studio Materials.</p>
+        <p class="lead">Made of Glass, Recycled Sterling Silver, Resin, and Recycled Studio Materials.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/closeup_ring_two.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -254,7 +254,7 @@
 <div class="row featurette">
   <div class="col-md-7 order-md-2">
     <h2 class="featurette-heading fw-normal lh-1">"Sunrise", <span class="text-muted">2022</span></h2>
-    <p class="lead">Bronze, Copper, Nickel, Silver, and Garnet</p>
+    <p class="lead">Produced from Bronze, Copper, Nickel, Silver, and Garnet</p>
   </div>
   <div class="col-md-5 order-md-1">
     <img src="public/images/showcase_sunrise.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -265,7 +265,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Lead Element" wrist cuff, <span class="text-muted">2022</span></h2>
-        <p class="lead">Sterling Silver and Blue Cubic Zerconeum.</p>
+        <p class="lead">A Mixture of Sterling Silver and Blue Cubic Zerconeum.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/showcase_cuff.JPG" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -277,7 +277,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">"Forseen", <span class="text-muted">2021</span></h2>
-        <p class="lead">Bronze, Garnet, Silver.</p>
+        <p class="lead">Fashioned from Bronze, Garnet, and Silver.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="public/images/showcase_eye.JPG" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -289,7 +289,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Floated", <span class="text-muted">2022</span></h2>
-        <p class="lead">Resin, Recycled Shower Curtain Rings, Recycled Mica and Art Decoration pieces.</p>
+        <p class="lead"> Fused from Resin, Recycled Shower Curtain Rings, Recycled Mica and Art Decoration pieces.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/showcase_resin.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -301,7 +301,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">"Valkyrie" diadem, <span class="text-muted">2022.</span></h2>
-        <p class="lead">Garnet, Nickel, Bronze, Copper, Faux Feathers.</p>
+        <p class="lead">Melded combination of Garnet, Nickel, Bronze, Copper, Faux Feathers.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="public/images/showcase_valkyrie_exhibit.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -313,7 +313,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Lily of The Valley" enamel work 2, <span class="text-muted">2022</span></h2>
-        <p class="lead">Enamel on Fine Silver, UV Resin.</p>
+        <p class="lead">Delicate Enameling on Fine Silver with UV Resin.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/showcase_lily.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -331,7 +331,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">"Unsolved", <span class="text-muted">2016</span></h2>
-        <p class="lead">Bronze and Nickel</p>
+        <p class="lead">Simply Bronze and Nickel</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="public/images/showcase_puzzle.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -343,7 +343,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Glassy", <span class="text-muted">2017</span></h2>
-        <p class="lead">Cold Enamel on Silver with Cubic Zerconeum.</p>
+        <p class="lead">Mixture of Cold Enamel on Silver with Cubic Zerconeum.</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/showcase_cold_enamel.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -355,7 +355,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">"Lily of The Valley" enamel work 1, <span class="text-muted">2022</span></h2>
-        <p class="lead">Enamel on Copper, Sterling Silver.</p>
+        <p class="lead">Crafted from Enamel on Copper and Sterling Silver.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="public/images/showcase_flower_enamel.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -367,7 +367,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">"Octopus's Treasure Trove", <span class="text-muted">2021</span></h2>
-        <p class="lead">Silver, Bronze, Recycled Artroom Materials</p>
+        <p class="lead">Assembly of Silver, Bronze, and Recycled Artroom Materials</p>
       </div>
       <div class="col-md-5">
         <img src="public/images/showcase_octopus.JPG" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
@@ -382,7 +382,7 @@
 
 
   <!-- FOOTER -->
-  <footer class="container">
+  <footer class="container footer-container">
     <p class="float-end"><a href="#">Back to top</a></p>
     <p>&copy; 2019–2023 Aurora Zhang &middot; 
       <a href="contact.html">Contact</a> &middot; 
