--- a/about.html
+++ b/about.html
@@ -20,10 +20,11 @@
   </head>
   <body>
 
+    <!--bg-dark fixed-top-->
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <nav class="navbar navbar-expand-md navbar-dark  ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Aurora Zhang</a>
+          <a class="navbar-brand" href="index.html"><img src="/public/images/az_logo.png" height="70px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,7 +45,7 @@
       </nav>
     </header>
 
- 
+ <!---->
 <div class="container">
   <header class="blog-header lh-1 py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
@@ -154,9 +155,9 @@
           <hr>
 
     </div>
-
+<!-- removed from class position sticky: style="top: 0rem;-->
     <div class="col-md-4">
-      <div class="position-sticky" style="top: 2rem;">
+      <div class="position-sticky">
         <div class="p-4 mb-3 bg-light rounded">
           <h4 class="fst-italic">Bio</h4>
           <p class="mb-0">Aurora Zhang was born and raised in Shanghai, China, but her 
@@ -175,7 +176,6 @@
             <li><a href="portfolio.html#group-one">Senior Projects</a></li>
             <li><a href="portfolio.html#group-two">Junior Projects</a></li>
             <li><a href="portfolio.html#group-three">Misc. Projects</a></li>
-            <li><a href="#">Print Projects</a></li>
           </ol>
         </div>
 
