unfinished second update

--- a/about.html
+++ b/about.html
@@ -24,12 +24,13 @@
     <header>
       <nav class="navbar navbar-expand-md navbar-dark  ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="/public/images/az_logo.png" height="70px"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="index.html"><img src="/public/images/az_logo.png" height="80px"></a>
+         <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            removed from ul reactive hamburger menu: navbar-nav mb-2-->
+            <ul class=" navbar-adjust me-auto  mb-md-0">
               <li class="nav-item">
                 <a class="nav-link" id="home-btn" href="index.html">Home</a>
               </li>
@@ -47,7 +48,8 @@
 
  <!---->
 <div class="container">
-  <header class="blog-header lh-1 py-3">
+  <!--removed from blog-header: py-3-->
+  <header class="blog-header lh-1 ">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
        <!-- <a class="link-secondary" href="#">Subscribe</a>-->
