--- a/contact.html
+++ b/contact.html
@@ -21,19 +21,19 @@
   <header>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-        <span class="fs-4"><img src="/public/images/az_logo.png" height="70px"></span>
+        <span class="fs-4"><img src="/public/images/az_logo.png" height="80px"></span>
       </a>
 
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 text-dark text-decoration-none" id="home-btn" href="index.html">Home</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" id="portfolio-btn" href="portfolio.html">Portfolio</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" id="about-btn" href="about.html">About</a>
+        <a class="navigator-btn me-3 py-2 text-dark text-decoration-none" id="home-btn" href="index.html">Home</a>
+        <a class="navigator-btn me-3 py-2 text-dark text-decoration-none" id="portfolio-btn" href="portfolio.html">Portfolio</a>
+        <a class="navigator-btn me-3 py-2 text-dark text-decoration-none" id="about-btn" href="about.html">About</a>
       </nav>
     </div>
 
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-      <h1 class="display-4 fw-normal">Contact the Artist</h1>
-      <p class="fs-5 text-muted">Quickly and efficiently get in touch with the Artist with any inquires or employment information. All support is greatly appreciated, and thank you for your time! </p>
+      <!--<h1 class="display-4 fw-normal">Contact the Artist</h1>-->
+      <!--<p class="fs-5 text-muted">Quickly and efficiently get in touch with the Artist with any inquires or employment information. All support is greatly appreciated, and thank you for your time! </p>-->
     </div>
   </header>
 
