attempted overscroll fix 4

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         <div class="container showcase-inner">
         <h1>Welcome</h1>
         <p>
-            The following website is a compendium of artwork created by Aurora Zhang, 
-            a metalworker and jewelry designer. 
+            The following is a compendium of artwork created by metalworker and jewelry designer Aurora Zhang. 
             Click 'Explore' to go to see Aurora's portfolio.
             <div>
                 <a href="portfolio.html" class="explore-btn" id="explore-btn">Explore</a>
