attempted landing screen fix 7

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aurora Zhang</title>
 
+<!--stylesheets-->
+    <link rel="stylesheet" type="text/css" href="./public/menu.css" />
+    <link rel="stylesheet" type="text/css" href="./public/landing.css"/>
 <!--Imported Font-->
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" type="text/css" href="./public/landing.css"/>
-    <link rel="stylesheet" type="text/css" href="./public/menu.css" />
+   
+    
   
 </head>
 <body>
