--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Aurora Zhang</title>
 
 <!--stylesheets-->
-    <link rel="stylesheet" type="text/css" href="./public/menu.css" />
     <link rel="stylesheet" type="text/css" href="./public/landing.css"/>
+    <link rel="stylesheet" type="text/css" href="./public/menu.css" />
+    
 <!--Imported Font-->
-<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 
 
    
@@ -18,6 +19,9 @@
   
 </head>
 <body>
+    
+    <div id="loadOverlay" style="background-color:#333; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
+
     <!--Hamburger Menu without JS only CSS-->
     <div class="menu-wrap">
     <input type="checkbox" class="toggler" />
