--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1>Welcome</h1>
         <p>
             The following is a compendium of artwork created by metalworker and jewelry designer Aurora Zhang. 
-            Click 'Explore' to go to see Aurora's portfolio.
+            Click below to explore Aurora's portfolio.
             <div>
                 <a href="portfolio.html" class="explore-btn" id="explore-btn">Explore</a>
             </div>
